Fix Dashboard pill link layout
This commit fix the misaligned Dashboard pill link under Chrome browser

--- a/app/assets/stylesheets/manager/dashboard.scss
+++ b/app/assets/stylesheets/manager/dashboard.scss
@@ -12,12 +12,12 @@
       list-style: none;
 
       a {
+        align-items: center;
         border: 1px solid $gray;
-        padding: 0.4375rem 0.625rem;
-
-        img {
-          vertical-align: middle;
-        }
+        display: flex;
+        height: 30px;
+        justify-content: center;
+        width: 35px;
       }
 
       a.active {
